# Engine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  rdSetting.cap
.cache/clangd/index/: AppLayer.hpp.BDE078CCB55AAD4A.idx  Color.cpp.A0C93E6F7126F75C.idx  Color.hpp.0121D2C631EBA6CD.idx  Component.cpp.FE302FF43F78852C.idx  Component.hpp.E24FB04BD607C8B0.idx  Engine.cpp.9E78C015E1CC304E.idx  Engine.cpp.A0CFE884BFE6B88D.idx  Engine.hpp.1FD07329491DDCD0.idx  Engine.hpp.A7579F2758EAB764.idx  Entity.cpp.280D451E33FD0B8A.idx  Flag.h.BC9C33727464AAB5.idx  Game.cpp.4B58A7A07A97FD00.idx  Game.hpp.E87805D902B5140D.idx  Object.hpp.06086D1ECCE0D92A.idx  Objeto.cpp.0334AA3E13551842.idx  PollEvent.cpp.55EC7EF8EAD8FAA5.idx  PollEvent.cpp.A6402C9C52E3C636.idx  PollEvent.hpp.7C5843E6756FEE32.idx  Render.cpp.BDEE0B3F6C5E520E.idx  Render.cpp.C91F994CDA5762F6.idx  Render.cpp.DC6ADB7DCE8F71AB.idx  Render.hpp.1486352117D18D74.idx  Render.hpp.79883839F2BB5EC4.idx  Thread.h.3777296A0C9A566D.idx  Thread_Linx.c.46AFF65711D1EA0E.idx  Thread_Win.c.BB7E7C37206F56B8.idx  TraceLog.hpp.5C1075AFF1D6BAB8.idx  Utils.hpp.822E8A29DCB8E27D.idx  Vector.cpp.4A0D5E4FC0C99339.idx  Vector.hpp.65EC5765FEAE8A5B.idx  Vector2.cpp.80FF4C91F79421DD.idx  Vector2.cpp.E3E8F4F017DD8856.idx  Vector2.hpp.A5FB99FE4059E2F0.idx  main.c.F4B97C97CB4FE5CF.idx  main.cpp.AC5C9D6FF0AC2267.idx  main.cpp.DA2C8FB375025C8F.idx
src/: CMakeLists.txt
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
src/Engine/Include/: CMakeLists.txt
src/Game/: Game.cpp  Game.hpp
src/Main/: CMakeLists.txt  main.cpp
(+24 files in other folders)
